Project Finished! Finally!!! Hooray!

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -2281,7 +2281,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-content {
-  text-align: center;
+  text-align: left;
 }
 
 .banner-content h1 {
