change url host by Javohir

--- a/src/main/webapp/views/user/assesment/LevelTest.html
+++ b/src/main/webapp/views/user/assesment/LevelTest.html
@@ -399,7 +399,7 @@
                 loadQuiz()
             } else {
 
-                fetch('http://localhost:8080/assessment', {
+                fetch('http://10.10.4.22:8080/assessment', {
                     method: 'POST',
                     headers: {
                         'Accept': 'application/json',
